fix: Fix Renting Offer Details Alignment inside Card - MEED-1051

--- a/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
+++ b/deeds-dapp-webapp/src/main/webapp/static/css/deeds.css
@@ -99,6 +99,9 @@ html {
 .mt-2px {
   margin-top: 2px !important;
 }
+.mr-n2px {
+  margin-right: -2px !important;
+}
 .max-height-40px {
   max-height:40px;
 }
